# cricket_analysis

./: cricket_player_analysis.ipynb  pyproject.toml
src/cricket_player_analysis/: data_summary.py  eda.py  inference.py
