[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Graduate-and-Non-graduate-Analysis"
version = "0.1.0"
description = "Data Analysis Project 3"
authors = [{name = "Guruchandra Kundena, Ashish R, Sreevani S"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "matplotlib>=3.4",
    "numpy>=1.21",
    "pandas>=1.3",
    "seaborn>=0.11",
]

[project.urls]
homepage = "https://github.com/kguruchandrak"
repository = "https://github.com/kguruchandrak/cricket_analysis"
documentation = "https://github.com/kguruchandrak/cricket_analysis/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]  



