[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cricket-data-analysis"
version = "0.1.0"
description = "A Python project for analyzing cricket player performance data."
authors = [{name = "Guruchandra Kundena, Ashish R, Sreevani S"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    pandas = "^1.2.0"
    numpy = "^1.19.2"
    matplotlib = "^3.3.2"
    scikit-learn = "^0.24.1"
    requests = "^2.25.1"
]

[project.urls]
homepage = "https://github.com/kguruchandrak"
repository = "https://github.com/kguruchandrak/cricket_analysis"
documentation = "https://github.com/kguruchandrak/cricket_analysis/blob/main/README.md"

[tool.setuptools.packages.find]
where = ["src"]  



